# umd-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/: 001_init.down.sql  001_init.up.sql  002_remove_username_unique.down.sql  002_remove_username_unique.up.sql
src/: dispatcher.rs  main.rs
src/bot/handlers/: fsm.rs  keyboards.rs  mod.rs
src/bot/handlers/admin/: admin.rs
src/bot/handlers/user/: mod.rs  registration.rs  slots.rs  update.rs  view.rs
src/domain/: error.rs  interfaces.rs  mod.rs
src/domain/models/: booking.rs  citizenship.rs  closed_range.rs  interval.rs  mod.rs  naive_time_interval.rs  reservation.rs  service.rs  slot.rs  student.rs  user.rs
src/domain/services/: available_slots_factory.rs  deadline_policy.rs  mod.rs  slots_factory.rs  working_hours_policy.rs
src/infra/: mod.rs
src/infra/mock/: mock_admin_provider.rs  mod.rs
src/infra/postgres/: db.rs  macros.rs  mod.rs  repository.rs
src/infra/postgres/fixtures/: test_slots.sql
src/services/: mod.rs
src/services/bookings_repository/: mock_bookings_repository.rs  mod.rs
src/usecases/: app.rs  available_days.rs  available_slots.rs  book.rs  cancel_booking.rs  cancel_reservation.rs  check_admin.rs  check_deadline.rs  check_registered.rs  days_with_free_slots.rs  dto.rs  free_slots.rs  get_user.rs  mod.rs  register_student.rs  register_user.rs  reservations.rs  reserve_slot.rs  slots.rs  update_user.rs
src/utils/postgres/: helpers.rs  migrations.rs  mod.rs  pool.rs  testing.rs
