[package]
name = "umd-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
async-trait = "0.1.88"
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio = { version = "1.46.1", features = ["macros"] }
